# EvolutionaryRuleInduction

./: .gitignore  CMakeLists.txt  Individual.cpp  Individual.h  Ingester.cpp  Ingester.h  Population.cpp  Population.h  README.md  RulesEngine.cpp  RulesEngine.h  config.h  main.cpp  randomUtil.h
data/: data3b.txt  format_data.py
data/fold1/: test.txt  train.txt
data/fold2/: test.txt  train.txt
data/fold3/: test.txt  train.txt
data/fold4/: test.txt  train.txt
data/fold5/: test.txt  train.txt
explorer/: ResultAnalysis.ipynb
explorer/.ipynb_checkpoints/: ResultAnalysis-checkpoint.ipynb
include/: Config.h  Environment.h  FPRuleEvaluation.h  IEvaluation.h  Individual.h  Ingester.h  Population.h  RuleMutator.h  RulesEngine.h  config.h  utils.h
include/GA/: Config.h  Environment.h  IEvaluation.h  IMutatable.h  Individual.h  Population.h  utils.h
scripts/: empty-results.sh  format_data.py  remove-results.sh
src/: FPRuleEvaluation.h  IEvaluation.h  Ingester.cpp  RulesEngine.cpp  main.cpp  main_old.cpp
